# aegis-foundry

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  architecture_diagram.md  docker-compose.yml  pyproject.toml  render.yaml  ruff.toml
.github/workflows/: ci.yml
aegis_foundry/: __init__.py  cli.py  config.py  orchestrator.py  state.py
aegis_foundry/agents/: _json_utils.py  backtest_engineer.py  base.py  coverage_cartographer.py  deployer.py  detection_author.py  governor.py  intel_scout.py  noise_forecaster.py  red_team.py  tuning_optimizer.py  verifier.py
aegis_foundry/core/: audit.py  compliance.py  factory.py  hosted_models.py  interfaces.py  llm.py  mcp_client.py  memory.py  roi.py  spl_match.py
aegis_foundry/web/: approvals.py  server.py
aegis_foundry/web/static/: app.js  console.html  design-tokens.css  index.html  landing.css  landing.js  style.css
demo/: run_pipeline.py
demo/fixtures/: README.md  advisories.json  attack_events.json  existing_saved_searches.json  generate_fixtures.py
docs/: SUBMISSION.md
scripts/: package_app.py
splunk_app/aegis_foundry/: README.txt
splunk_app/aegis_foundry/default/: alert_actions.conf  app.conf  indexes.conf  props.conf  savedsearches.conf
splunk_app/aegis_foundry/default/data/ui/nav/: default.xml
splunk_app/aegis_foundry/default/data/ui/views/: attack_coverage.xml  flight_recorder.xml
tests/: conftest.py  test_agents.py  test_audit_chain.py  test_compliance.py  test_forecaster.py  test_mock_mcp.py  test_pipeline_e2e.py  test_robustness.py  test_roi.py  test_state.py  test_web_console.py
